# relic

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  BIOME_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  lefthook.yml  package.json  turbo.json
.changeset/: add-mcp-server.md  cli-improvements.md  config.json  dev-isolation.md  editor-secret-deletion.md  export-rate-limit-hardening.md  fix-cli-account-password-gating.md  fix-cli-runtime-regressions.md  fix-cli-source-tui-loader.md  fix-npm-publish.md  npm-binary-distribution.md  tighten-export-rate-limits.md  tiny-cases-melt.md  update-cli-pricing-copy.md
.claude/: CLAUDE.md
.claude/apps/: cli.md
.claude/guides/: biome.md  conventions.md
.github/workflows/: build-rust.yml  changesets.yml  ci.yml  deploy-backend.yml  deploy-og.yml  deploy-web.yml  release.yml  sync-changelog.yml  update-homebrew-tap.yml
apps/cli/: .env.example  .gitignore  CHANGELOG.md  PUBLISH.md  README.md  index.ts  package.json  tsconfig.json  tui.d.ts
apps/cli/bindings/: Cargo.toml
apps/cli/bindings/src/: lib.rs  telemetry.rs
apps/cli/bindings/src/cli/: app.rs
apps/cli/bindings/src/helper/: device_cache.rs  function.rs  master_password.rs  scope_guard.rs  session.rs
apps/cli/bindings/src/service/: auth.rs  organization.rs  user.rs
apps/cli/bindings/src/telemetry/: core.rs  macros.rs  panic.rs  sentry_layer.rs  tracing.rs
apps/cli/bindings/src/tui/: app.rs  components.rs  home.rs  modal.rs  modals.rs  project_screen.rs  screens.rs  state.rs
apps/cli/bindings/src/tui/components/: help_bar.rs  layout.rs  list.rs  logo.rs  status_bar.rs  subtitle.rs
apps/cli/bindings/src/tui/modals/: create_organization.rs  create_project.rs  device_code_auth.rs  master_password.rs  pro_plan_upgrade.rs  scope_selector.rs
apps/cli/bindings/src/tui/screens/: home.rs  login.rs  project.rs  types.rs
apps/cli/bindings/src/util/: app_config.rs  crypto.rs
apps/docs/: .gitignore  docs.json  enterprise.mdx  introduction.mdx  package.json  troubleshooting.mdx  tsconfig.json
apps/og-worker/: README.md  package.json  tsconfig.json  wrangler.jsonc
apps/web/: .gitignore  DEPLOY.md  README.md  convex  middleware.ts  next.config.js  package.json  proxy.ts  tsconfig.check.json  tsconfig.json  worker-entry.ts  wrangler.jsonc
homebrew/: relic.rb
npm/: .gitignore
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json
npm/relic/: README.md  (+2 more)
scripts/: cleanup.sh  clear-master-password.sh  clear-password.sh  send-email.sh
(+179 files in other folders)
