[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# for tui
crossterm = "0.29.0"
ratatui = "0.29.0"
# for cryptography
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rsa = "0.9.8"
sha2 = "0.10.9"
rand = "0.9.2"
zeroize = { version = "1.8.2", features = ["derive"] }
base64 = "0.22.1"

[lib]
crate-type = ["cdylib"]
