[package]
name = "relic"
description = "Secret manager that keeps your secrets safe and your workflow simple."
authors = ["Can Vardar <https://github.com/cupolalabs/relic>"]
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# for tui
crossterm = "0.29.0"
ratatui = "0.29.0"
# for cryptography
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rsa = "0.9.8"
sha2 = "0.10.9"
rand = "0.9.2"
zeroize = { version = "1.8.2", features = ["derive"] }
base64 = "0.22.1"
# for convex client
convex = "0.10.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.100"
dirs = "6.0.0"

[dev-dependencies]
serial_test = "3.2.0"

[lib]
crate-type = ["cdylib"]
