[package]
name = "relic"
description = "Secret manager that keeps your secrets safe and your workflow simple."
authors = ["Can Vardar <https://github.com/cupolalabs/relic>"]
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# for tui
crossterm = "0.29.0"
ratatui = "0.29.0"
ctrlc = "3.4"
tui-big-text = "0.7"
tui-textarea = "0.7"
opener = "0.7"
# for cryptography
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rsa = "0.9.8"
sha2 = "0.10.9"
rand = "0.9.2"
zeroize = { version = "1.8.2", features = ["derive"] }
base64 = "0.22.1"
# for convex client
convex = "0.10.1"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.100"
dirs = "6.0.0"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
# for cli
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.2.3"
reqwest = { version = "0.12.24", features = ["json"] }
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
directories = "6.0.0"
lazy_static = "1.5.0"
color-eyre = "0.6.5"

[dev-dependencies]
serial_test = "3.2.0"

[lib]
crate-type = ["cdylib"]
